--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
  <!-- echo "# Github-Lec-1" >> README.md
-git init
+git init // yah version controll ko start karta hai 
 git add README.md
 git commit -m "first commit"
 git branch -M main
